--- a/package.json
+++ b/package.json
@@ -2,5 +2,8 @@
   "name": "multiplayer",
   "version": "1.0.0",
   "main": "index.js",
-  "license": "MIT"
+  "license": "MIT",
+  "scripts": {
+    "start": "node server"
+  }
 }
