--- a/package.json
+++ b/package.json
@@ -4,6 +4,11 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "node --experimental-modules server.mjs"
+    "start": "node --experimental-modules index.mjs"
+  },
+  "dependencies": {
+    "performance-now": "^2.1.0",
+    "raf": "^3.4.0",
+    "ws": "^5.1.1"
   }
 }
